@@ -21,6 +21,7 @@ Date:
         - Add dependency information for tree and resource spawns, fluid pumping, and asteroid mining.
         - (SA) Locations (except nauvis) are now part of the default milestone list.
         - Milestone overlays can be displayed on inaccessible objects.
+        - With 22+ milestones, tooltip headers don't draw them unnecessarily overlapped, and can use multiple lines.
     Internal changes:
         - Dependency and automation analysis allows more ORs, e.g. "(spawner and capture-ammo) or item-to-place".
 ----------------------------------------------------------------------------------------------------------------------
